Rearrange sibling selectors to fix blur
Add brief animation on background property to ease transition from blurry image

--- a/client/stylesheets/components/_gallery.sass
+++ b/client/stylesheets/components/_gallery.sass
@@ -21,6 +21,8 @@
       background-repeat: no-repeat
       overflow: hidden
       +backface-visibility(hidden)
+      +transition(none)
+      +transition(background 0.125s ease-in)
 
       .overlay
         border-bottom: 100px solid yellow
@@ -70,6 +72,7 @@
         +transition-delay(.3s)
 
 
+  & + #nav-component,
   & + #nav-component + #grid-component,
-  & + #nav-component
+  & + #nav-component + #user-component
     +filter(blur(6px))
